# LeetIRCPythonBot

./: .coveragerc  .env.sample  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CLEANUP_SUMMARY.md  FEATURE_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  NEW_FEATURES_DEMO.md  PLAN.md  PlantUML.puml  README.md  TAMAGOTCHI_TOGGLE_FIX.md  TEST_CONSOLIDATION_SUMMARY.md  TEST_PLAN.md  UML.md  VERSION  WARP.md  bot_manager.py  chrony_daily_check.sh  command_loader.py  command_registry.py  commands.py  commands_admin.py  commands_basic.py  commands_extended.py  commands_legacy.py  config.py  conftest.py  conversation_history.json  coverage.json  crashlog.txt  data.pkl  debug_digitraffic-api.py  debug_electricity_mapping.py  debug_electricity_mapping_prices.txt  debug_electricity_service.py  debug_irc_commands.py  (+81 more)
.github/workflows/: auto-format.yml  tests.yml
data/: alko_cache.json  alkon-hinnasto-tekstitiedostona.tmp  ecodes.json  nimipaivat.json  nimipaivat_others.json  nimipaivat_scrape_temp.json  otiedote.json  prescription_interactions.json  sananmuunnokset.json  state.json  # Path to bot state file  tamagotchi.json  urls.json  ~$alkon-hinnasto-tekstitiedostona.xlsx
docs/: IMPROVEMENT_PLAN.md  RELOAD_PLAN.md  TIMING_PLAN.md
services/: __init__.py  crypto_service.py  digitraffic_service.py  electricity_service.py  eurojackpot_service.py  fmi_warning_service.py  gpt_service.py  ipfs_service.py  otiedote_service.py  scheduled_message_service.py  solarwind_service.py  weather_forecast_service.py  weather_service.py  youtube_service.py
src/: __init__.py  bot_manager.py  command_loader.py  command_registry.py  commands.py  commands_admin.py  commands_basic.py  commands_extended.py  commands_irc.py  commands_services.py  config.py  conftest.py  console_manager.py  irc_client.py  leet_detector.py  lemmatizer.py  logger.py  main.py  message_handler.py  paths.py  reload_manager.py  server.py  server_manager.py  service_manager.py  state_utils.py  subscriptions.py  tamagotchi.py  tui.py
src/cmd_modules/: __init__.py  admin.py  admin_privileged.py  basic.py  commands_services.py  games.py  irc.py  misc.py  services.py  word_tracking.py
src/commands/: __init__.py
src/data/: alko_cache.json  alkon-hinnasto-tekstitiedostona.xlsx
src/debug/: __init__.py  debug_alko.py  debug_api_keys.py  debug_console_command_issues.py  debug_digitraffic-api.py  debug_drugs.py  debug_electricity_mapping.py  debug_electricity_mapping_interactive.py  debug_electricity_mapping_prices.txt  debug_electricity_service.py  debug_irc_commands.py  debug_kaiku.py  debug_otiedote_command.py  debug_otiedote_flow.py  debug_sananmuunnokset.py  debug_tui_mouse.py  debug_x_api.py  merge_others_data.py  migrate_subscriptions.py  scrape_ecodes.py  scrape_eurojackpot.py  scrape_nimipaivat-dog-cat.py  scrape_nimipaivat-hevonen-historiallinen.py  scrape_nimipaivat-others-playwright.py  scrape_nimipaivat-others.py  scrape_nimipaivat.py  scrape_nimipaivat_fast.py  scrape_otiedote.py  scrape_prescription_interactions.py  scraping_report_ecodes.md  test_find_price.py  test_leet_winners.py  test_nanoleet.py  test_saaennuste.py  (+1 more)
tests/: !TEST_SUMMARY.md  MIGRATION_PROGRESS.md  __init__.py  conftest.py  test_admin_commands.py  test_admin_commands_comprehensive.py  test_admin_commands_new.py  test_bac_tracker.py  test_bot_functionality.py  test_bot_manager.py  test_bot_manager_delegates.py  test_command_registry.py  test_commands.py  test_commands_admin.py  test_commands_admin_behavior.py  test_commands_alko.py  test_commands_basic.py  test_commands_basic_functionality.py  test_commands_console.py  test_commands_crypto.py  test_commands_data.py  test_commands_drugs.py  test_commands_electricity.py  test_commands_eurojackpot.py  test_commands_games.py  test_commands_irc.py  test_commands_latency.py  test_commands_media.py  test_commands_misc.py  test_commands_otiedote.py  test_commands_services.py  test_commands_services_comprehensive.py  test_commands_trains.py  test_commands_weather.py  test_commands_word_tracking.py  test_config.py  test_config_new.py  test_console_command_kaiku.py  test_console_commands.py  test_console_commands_new.py  (+68 more)
word_tracking/: __init__.py  data_manager.py  drink_tracker.py  general_words.py  tamagotchi_bot.py
(+33 files in other folders)
