[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-ignore = [
    "E203",
    "E501",
    "F401",
    "F841",
    "E402",
    # Project baseline: these are intentionally common in this IRC bot and tests.
    "S101", # pytest uses assert statements
    "S110", # cleanup / optional dependency probes intentionally ignore failures
    "S112", # parser loops intentionally skip malformed records
    "S311", # non-cryptographic randomness is used for games and playful replies
]
select = ["E", "F", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"src/debug/*.py" = ["S113"]
"tests/*.py" = ["S105", "S604"]

[tool.ruff.lint.mccabe]
max-complexity = 10
