[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetircpythonbot"
version = "2.4.74"
description = "Python IRC bot with multi-server support, services, and a modern command system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "defusedxml",
    "feedparser",
    "google-api-python-client",
    "isodate",
    "openai",
    "openpyxl",
    "pandas",
    "playwright",
    "psutil",
    "pyperclip",
    "python-dotenv",
    "pytz",
    "requests",
    "rich",
    "urwid",
    "xdk",
]

[dependency-groups]
dev = [
    "bandit",
    "coverage",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".pytest_cache",
    ".tmp",
    ".uv-cache",
    ".venv",
    "venv",
]

[tool.ruff.lint]
extend-ignore = [
    "E203",
    "E501",
    "F401",
    "F841",
    "E402",
    # Project baseline: these are intentionally common in tests.
    "S101", # pytest uses assert statements
]
select = ["E", "F", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"src/debug/*.py" = ["S110", "S112", "S113", "S311"]
"src/bot_manager.py" = ["S110"]
"src/cmd_modules/admin_privileged.py" = ["S110"]
"src/cmd_modules/basic.py" = ["S110"]
"src/cmd_modules/misc.py" = ["S110"]
"src/cmd_modules/services.py" = ["S110"]
"src/handlers/message_handler.py" = ["S110"]
"src/irc_client.py" = ["S110"]
"src/leet_detector.py" = ["S110"]
"src/lemmatizer.py" = ["S110"]
"src/logger.py" = ["S110"]
"src/main.py" = ["S110"]
"src/services/__init__.py" = ["S110"]
"src/services/alko_service.py" = ["S110"]
"src/services/digitraffic_service.py" = ["S112"]
"src/services/eurojackpot_service.py" = ["S110", "S112"]
"src/services/weather_forecast_service.py" = ["S110", "S112"]
"src/services/youtube_service.py" = ["S110"]
"src/tui.py" = ["S110"]
"tests/*.py" = ["S101", "S105", "S106", "S110", "S604"]

[tool.ruff.lint.mccabe]
max-complexity = 10
